new branches added

--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@
                          <li>
                             <a href="#">Services</a>
                         </li>
-                         <li><a href="#">Our Gallery</a></li>
-                            </li>
+                         <li><a href="#">Our Gallery</a>
+                        </li>
+                     </li>
                          
                          
                             <li><a href="#">Contact</a></li>
@@ -205,9 +206,9 @@
                 <div class="hero-slider-bg bg-size-cover" style="background-image: url(assets/img/hero-img/banner-1\ \(2\).png);"></div>
                 <div class="container container-1400">
                     <div class="slider-content-box" data-animation="fadeInUp" data-delay="0.4s">
-                        <h1 class="title" data-animation="fadeInDown" data-delay="0.7s">Al Zahia Pharmacy Solutions</h1>
-                        <p data-animation="fadeInLeft" data-delay="0.8s">Your personalized gateway to health, offering expert advice and comprehensive pharmaceutical services.</p>
-                        <a href="#" class="template-btn" data-animation="fadeInUp" data-delay="0.9s">Contact us <i class="far fa-plus"></i></a>
+                        <h1 class="title" data-animation="fadeInDown" data-delay="0.7s">Al Zahia Pharmacy</h1>
+                        <p data-animation="fadeInLeft" data-delay="0.8s" >Your personalized gateway to health, offering expert advice and comprehensive pharmaceutical services.</p>
+                        <a href="#" class="template-btn" data-animation="fadeInUp" data-delay="0.9s">Contact us<i class="far fa-plus"></i></a>
                     </div>
                 </div>
             </div>
@@ -215,8 +216,8 @@
                 <div class="hero-slider-bg bg-size-cover" style="background-image: url(assets/img/hero-img/banner-2\ \(2\).png);"></div>
                 <div class="container container-1400">
                     <div class="slider-content-box" data-animation="fadeInUp" data-delay="0.4s">
-                        <h1 class="title" data-animation="fadeInDown" data-delay="0.7s">Al Zahia Pharmacy Solutions</h1>
-                        <p data-animation="fadeInLeft" data-delay="0.8s">Your personalized gateway to health, offering expert advice and comprehensive pharmaceutical services.</p>
+                        <h1 class="title" data-animation="fadeInDown" data-delay="0.7s">Al Zahia Pharmacy </h1>
+                        <p data-animation="fadeInLeft" data-delay="0.8s" >Your personalized gateway to health, offering expert advice and comprehensive pharmaceutical services.</p>
                         <a href="#" class="template-btn" data-animation="fadeInUp" data-delay="0.9s">Contact us <i class="far fa-plus"></i></a>
                     </div>
                 </div>
@@ -225,8 +226,8 @@
                 <div class="hero-slider-bg bg-size-cover" style="background-image: url(assets/img/hero-img/banner-3\ \(2\).png);"></div>
                 <div class="container container-1400">
                     <div class="slider-content-box" data-animation="fadeInUp" data-delay="0.4s">
-                        <h1 class="title" data-animation="fadeInDown" data-delay="0.7s">Al Zahia Pharmacy Solutions</h1>
-                        <p data-animation="fadeInLeft" data-delay="0.8s">Your personalized gateway to health, offering expert advice and comprehensive pharmaceutical services.</p>
+                        <h1 class="title" data-animation="fadeInDown" data-delay="0.7s">Al Zahia Pharmacy </h1>
+                        <p data-animation="fadeInLeft" data-delay="0.8s" >Your personalized gateway to health, offering expert advice and comprehensive pharmaceutical services.</p>
                         <a href="#" class="template-btn" data-animation="fadeInUp" data-delay="0.9s">Contact us <i class="far fa-plus"></i></a>
                     </div>
                 </div>
@@ -733,6 +734,30 @@
             </div>
         </div>
     </section>
+<section class="services-area section-gap-top-less bg-color-grey">
+        <div class="container">
+            <h1 class="page-title text-center">Our Branches</h1>
+            <div class="row justify-content-center service-loop">
+                <div class="col-lg-4 col-md-6 col-sm-8">
+                    <div class="fancy-content-box-two no-shadow mt-30">
+                        <div class="thumbnail">
+                            <img src="assets/img/Branches/Albedaa.png" alt="Image">
+                        </div>
+                        <div class="box-content">
+                            <!-- <div class="icon">
+                                <img src="assets/img/icon/heart-2.png" alt="">
+                            </div> -->
+                            <div class="content">
+                                <h4 class="title"><a href="https://maps.app.goo.gl/VDvPkDKrnGLMruYk8">Alibadd</a></h4>
+                                <p>Jamal Abdul Naser Street Opp Kreich Restaurant,Sharjah,UAE</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <section class="faq-section section-gap">
         <div class="container">
