--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" crossorigin="anonymous" />
+
 </head>
 
 <body>
@@ -325,6 +327,80 @@
         </div>
     </section>
     <!--====== About Section End ======-->
+ <section class="services-area section-gap-top-less bg-color-grey">
+    <div class="container">
+        <h1 class="page-title text-center">Our Branches</h1>
+        <div class="row justify-content-center service-loop">
+            <div class="col-lg-4 col-md-6 col-sm-8">
+                <div class="fancy-content-box-two no-shadow mt-30">
+                    <div class="thumbnail">
+                        <img src="assets/img/Branches/Albedaa.png" alt="Image">
+                    </div>
+                    <div class="box-content">
+                        <div class="content">
+                            <h4 class="title"><a href="https://maps.app.goo.gl/VDvPkDKrnGLMruYk8">AL IBDAA PHARMACY LLC</a></h4>
+                            <p>Jamal Abdul Naser Street Opp Kreich Restaurant, Sharjah, UAE</p>
+                            <div class="contact-icons">
+                                <div class="contact-icon">
+                                    <a href="https://wa.me/971565113999"><i class="fab fa-whatsapp"></i></a>
+                                </div>
+                                <div class="contact-icon">
+                                    <a href="tel:+971565113999"><i class="fa fa-phone"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+              <div class="col-lg-4 col-md-6 col-sm-8">
+                <div class="fancy-content-box-two no-shadow mt-30">
+                    <div class="thumbnail">
+                        <img src="assets/img/Branches/ORCHID PHARMACY.png" alt="Image">
+                    </div>
+                    <div class="box-content">
+                        <div class="content">
+                            <h4 class="title"><a href="https://maps.app.goo.gl/akt4ANS2a97oCEj47">ORCHID PHARMACY</a></h4>
+                            <p>89H9+7C3 - Al Khan - Sharjah - United Arab Emirates</p>
+                            <div class="contact-icons">
+                                <div class="contact-icon">
+                                    <a href="https://wa.me/971565227932"><i class="fab fa-whatsapp"></i></a>
+                                </div>
+                                <div class="contact-icon">
+                                    <a href="tel:+971565227932"><i class="fa fa-phone"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-8">
+                <div class="fancy-content-box-two no-shadow mt-30">
+                    <div class="thumbnail">
+                        <img src="assets/img/Branches/RUKN AL WAHDA PHARMACY.png" alt="Image">
+                    </div>
+                    <div class="box-content">
+                        <div class="content">
+                            <h4 class="title"><a href="https://maps.app.goo.gl/JDCwSmgPwiG8HTeR8">RUKN AL WAHDA PHARMACY</a></h4>
+                            <p>8CV2+X65 - Unnamed Road - Sharjah - United Arab Emirates</p>
+                            <div class="contact-icons">
+                                <div class="contact-icon">
+                                    <a href="https://wa.me/9710589811454"><i class="fab fa-whatsapp"></i></a>
+                                </div>
+                                <div class="contact-icon">
+                                    <a href="tel:+971065433757"><i class="fa fa-phone"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
 
     <!--====== Service Section Start ======-->
     <section class="service-section bg-color-grey section-gap">
@@ -734,29 +810,7 @@
             </div>
         </div>
     </section>
-<section class="services-area section-gap-top-less bg-color-grey">
-        <div class="container">
-            <h1 class="page-title text-center">Our Branches</h1>
-            <div class="row justify-content-center service-loop">
-                <div class="col-lg-4 col-md-6 col-sm-8">
-                    <div class="fancy-content-box-two no-shadow mt-30">
-                        <div class="thumbnail">
-                            <img src="assets/img/Branches/Albedaa.png" alt="Image">
-                        </div>
-                        <div class="box-content">
-                            <!-- <div class="icon">
-                                <img src="assets/img/icon/heart-2.png" alt="">
-                            </div> -->
-                            <div class="content">
-                                <h4 class="title"><a href="https://maps.app.goo.gl/VDvPkDKrnGLMruYk8">Alibadd</a></h4>
-                                <p>Jamal Abdul Naser Street Opp Kreich Restaurant,Sharjah,UAE</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+
 
 
     <section class="faq-section section-gap">
