About and contact Pages completed

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             <li class="active">
                                 <a href="index.html">Home</a>  
                             </li>
-                            <li><a href="#">About</a></li>
+                            <li><a href="about.html">About</a></li>
                             <li>
                          <li>
                             <a href="#">Services</a>
@@ -109,7 +109,7 @@
                      </li>
                          
                          
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -320,7 +320,7 @@
                         <p>
                             At Al Zahia Pharmacy, we are dedicated to providing exceptional pharmacy services to our community. With a commitment to quality, reliability, and customer satisfaction, we strive to be your trusted health partner. Our comprehensive range of pharmacy services ensures that you receive the care and support you need for your health and well-being
                         </p>
-                        <a href="" class="template-btn mt-40">Discover More<i class="far fa-plus"></i></a>
+                        <a href="about.html" class="template-btn mt-40">Discover More<i class="far fa-plus"></i></a>
                     </div>
                 </div>
             </div>
