--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <title>Al Zahia Pharmacy || Service</title>
 
     <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="assets/img/favicon.ico" type="img/png" />
+    <link rel="shortcut icon" href="assets/img/fevicon.png" type="img/png" />
     <!--====== Animate Css ======-->
     <link rel="stylesheet" href="assets/css/animate.min.css" />
     <!--====== Bootstrap css ======-->
