--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seeva - Medical and Dental HTML Template || Contact Us</title>
+    <title>Al Zahia Pharmacy || Service|| Contact Us</title>
 
     <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="assets/img/favicon.ico" type="img/png" />
+    <link rel="shortcut icon" href="assets/img/fevicon.png" type="img/png" />
     <!--====== Animate Css ======-->
     <link rel="stylesheet" href="assets/css/animate.min.css" />
     <!--====== Bootstrap css ======-->
