gallery images is updated

--- a/index.html
+++ b/index.html
@@ -182,14 +182,14 @@
                         <li class="active">
                             <a href="index.html">Home</a>
                         </li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="about.html">About</a></li>
                         <li>
                            <li>
                                <a href="#">Services</a>
                         </li>
                             <li><a href="#">Our Gallery</a></li>
                         </li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
                 <a href="#" class="panel-close">
@@ -388,6 +388,27 @@
                                 </div>
                                 <div class="contact-icon">
                                     <a href="tel:+971065433757"><i class="fa fa-phone"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+              <div class="col-lg-4 col-md-6 col-sm-8">
+                <div class="fancy-content-box-two no-shadow mt-30">
+                    <div class="thumbnail">
+                        <img src="assets/img/Branches/SHAMS AL SABAH PHARMACY.png" alt="Image">
+                    </div>
+                    <div class="box-content">
+                        <div class="content">
+                            <h4 class="title"><a href="https://maps.app.goo.gl/n8Frc2tqpWULrXeg9">SHAMS AL SABAH PHARMACY</a></h4>
+                            <p>near ADCB METRO STATION - Al Karama - Dubai - United Arab Emirates</p>
+                            <div class="contact-icons">
+                                <div class="contact-icon">
+                                    <a href="https://wa.me/971588335189"><i class="fab fa-whatsapp"></i></a>
+                                </div>
+                                <div class="contact-icon">
+                                    <a href="tel:+971588335189"><i class="fa fa-phone"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -733,11 +754,11 @@
                 <div class="col-lg-4 col-sm-6 medical dental-care">
                     <div class="gallery-item-two mt-30">
                         <div class="gallery-thumbnail">
-                            <img src="assets/img/gallery/gallery-1.png" alt="Image">
+                            <img src="assets/img/gallery/G-1.png" alt="Image">
                         </div>
                         <div class="gallery-caption">
                             <div>
-                                <a href="assets/img/gallery/gallery-1.png" class="plus-icon"><i class="far fa-plus"></i></a>
+                                <a href="assets/img/gallery/G-1.png" class="plus-icon"><i class="far fa-plus"></i></a>
                                 
                             </div>
                         </div>
@@ -746,11 +767,11 @@
                 <div class="col-lg-4 col-sm-6 senior-care dental-care">
                     <div class="gallery-item-two mt-30">
                         <div class="gallery-thumbnail">
-                            <img src="assets/img/gallery/gallery-2.png" alt="Image">
+                            <img src="assets/img/gallery/G-2.png" alt="Image">
                         </div>
                         <div class="gallery-caption">
                             <div>
-                                <a href="assets/img/gallery/gallery-2.png" class="plus-icon"><i class="far fa-plus"></i></a>
+                                <a href="assets/img/gallery/G-2.png" class="plus-icon"><i class="far fa-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -758,11 +779,11 @@
                 <div class="col-lg-4 col-sm-6 family-care">
                     <div class="gallery-item-two mt-30">
                         <div class="gallery-thumbnail">
-                            <img src="assets/img/gallery/Gallery-3.png" alt="Image">
+                            <img src="assets/img/gallery/G-3.png" alt="Image">
                         </div>
                         <div class="gallery-caption">
                             <div>
-                                <a href="assets/img/gallery/Gallery-3.png" class="plus-icon"><i class="far fa-plus"></i></a>
+                                <a href="assets/img/gallery/G-3.png" class="plus-icon"><i class="far fa-plus"></i></a>
                                 
                             </div>
                         </div>
@@ -771,11 +792,11 @@
                 <div class="col-lg-4 col-sm-6 medical senior-care">
                     <div class="gallery-item-two mt-30">
                         <div class="gallery-thumbnail">
-                            <img src="assets/img/gallery/gallery-4.png" alt="Image">
+                            <img src="assets/img/gallery/G-4.png" alt="Image">
                         </div>
                         <div class="gallery-caption">
                             <div>
-                                <a href="assets/img/gallery/gallery-4.png" class="plus-icon"><i class="far fa-plus"></i></a>
+                                <a href="assets/img/gallery/G-4.png" class="plus-icon"><i class="far fa-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -783,11 +804,11 @@
                 <div class="col-lg-4 col-sm-6 senior-care dental-care">
                     <div class="gallery-item-two mt-30">
                         <div class="gallery-thumbnail">
-                            <img src="assets/img/gallery/gallery-5.png" alt="Image">
+                            <img src="assets/img/gallery/G-5.png" alt="Image">
                         </div>
                         <div class="gallery-caption">
                             <div>
-                                <a href="assets/img/gallery/gallery-5.png" class="plus-icon"><i class="far fa-plus"></i></a>
+                                <a href="assets/img/gallery/G-5.png" class="plus-icon"><i class="far fa-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -795,11 +816,11 @@
                 <div class="col-lg-4 col-sm-6 medical family-care">
                     <div class="gallery-item-two mt-30">
                         <div class="gallery-thumbnail">
-                            <img src="assets/img/gallery/Gallery-6.png" alt="Image">
+                            <img src="assets/img/gallery/G-7.png" alt="Image">
                         </div>
                         <div class="gallery-caption">
                             <div>
-                                <a href="assets/img/gallery/Gallery-6.png" class="plus-icon"><i class="far fa-plus"></i></a>
+                                <a href="assets/img/gallery/G-7.png" class="plus-icon"><i class="far fa-plus"></i></a>
                             </div>
                         </div>
                     </div>
