--- a/about.html
+++ b/about.html
@@ -234,6 +234,96 @@
       </div>
     </section>
     <!--====== About Section End ======-->
+    <!-- <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <img src="assets/img/section-img/mission.png" alt="" />
+        </div>
+        <div class="col-md-6">
+          <h1>Mission</h1>
+          <p>
+            At Al Zahia Pharmacy, our mission is to serve our community with
+            exceptional pharmacy services, guided by a dedication to quality,
+            reliability, and customer satisfaction. We aim to be the trusted
+            health partner for individuals and families, providing comprehensive
+            care and support for their health and well-being
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h1>Vision</h1>
+          <p>
+            Our vision at Al Zahia Pharmacy is to become the premier destination
+            for pharmacy services in our community, known for our unwavering
+            commitment to excellence and customer-centric approach. We aspire to
+            continually innovate and adapt to meet the evolving needs of our
+            customers, empowering them to lead healthier lives with confidence
+            and peace of mind.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <img src="assets/img/section-img/vision.png" alt="" />
+        </div>
+      </div>
+    </div>
+    </section> -->
+
+    <section class="about-section section-gap">
+      <div class="container">
+        <div class="row align-items-center justify-content-center">
+          <div class="col-lg-6 col-md-6">
+            <div class="bordered-icon-wrapper">
+              <img src="assets/img/section-img/Mission.png" alt="AboutImg" />
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6">
+            <div class="about-content">
+              <div class="section-heading mb-35">
+                <h2 class="title">Mission</h2>
+              </div>
+              <p>
+                At Al Zahia Pharmacy, our mission is to serve our community with
+                exceptional pharmacy services, guided by a dedication to
+                quality, reliability, and customer satisfaction. We aim to be
+                the trusted health partner for individuals and families,
+                providing comprehensive care and support for their health and
+                well-being
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="about-section section-gap">
+      <div class="container">
+        <div class="row align-items-center justify-content-center">
+          <div class="col-lg-6 col-md-6">
+            <div class="about-content">
+              <div class="section-heading mb-35">
+                <h2 class="title">Vision</h2>
+              </div>
+              <p>
+                Our vision at Al Zahia Pharmacy is to become the premier
+                destination for pharmacy services in our community, known for
+                our unwavering commitment to excellence and customer-centric
+                approach. We aspire to continually innovate and adapt to meet
+                the evolving needs of our customers, empowering them to lead
+                healthier lives with confidence and peace of mind.
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6">
+            <div class="bordered-icon-wrapper">
+              <img src="assets/img/section-img/Vision.png" alt="AboutImg" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <div class="wcu-with-doctors">
       <!--====== Why Choose Section Start ======-->
@@ -425,77 +515,95 @@
 
     <!--====== Start Template Footer ======-->
     <footer class="template-footer have-cta-boxed-one">
-        <div class="footer-inner bg-color-grey">
-            <div class="container">
-                <div class="footer-widgets">
-                    <div class="row">
-                        <div class="col-lg-3 col-md-8">
-                            <div class="widget text-widget">
-                                <div class="footer-logo">
-                                    <img src="assets/img/Alp-Logo.png" alt="Medibo">
-                                </div>
-                                <p>
-                                Exceptional, reliable care for your health needs. Your trusted health partner for quality pharmacy services.
-                                </p>
-                                <ul class="contact-list">
-                                    <li>
-                                        <a href="https://goo.gl/maps/inpkL6wUZqMR3opX7"><i class="far fa-map-marker-alt"></i>Al Zahia Sharjah, U.A.E</a>
-                                    </li>
-                                    <li>
-                                        <a href="mailto:Zahiapharmacy@gmail.com"><i class="far fa-envelope"></i>Zahiapharmacy@gmail.com</a>
-                                    </li>
-                                    <li>
-                                        <a href="tel:+971568474200"><i class="far fa-phone"></i>+971 568474200</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="row">
-                                <div class="col-xl-5 col-md-6">
-                                    <div class="widget nav-widget">
-                                        <h4 class="widget-title">Popular Services</h4>
-                                        <ul class="nav-links">
-                                            <li><a href="#">Personal Care</a></li>
-                                            <li><a href="#">Oral Care</a></li>
-                                            <li><a href="#">Hair Care</a></li>
-                                            <li><a href="#">Orthopedics</a></li>
-                                            <li><a href="#">Medicines</a></li>
-                                            
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="col-xl-5 col-md-6">
-                                    <div class="widget nav-widget">
-                                        <h4 class="widget-title">Quick Links</h4>
-                                        <ul class="nav-links">
-                                            <li><a href="index.html">Home</a></li>
-                                            <li><a href="#">About</a></li>
-                                            <li><a href="#">Service</a></li>
-                                            <li><a href="#">Our Gallery</a></li>
-                                            <li><a href="#">Contact</a></li>
-                                            
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-10">
-                            <div class="widget newsletters-widget">
-                                <h4 class="widget-title">Location</h4>
-                            <div class="google-maps">
-                    <!-- Height=450px; Width=600px -->
-                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3606.4803776046215!2d55.468004500000006!3d25.321656599999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f5f8b08aa4211%3A0x49b620a79111f201!2sAL%20ZAHIA%20PHARMACY!5e0!3m2!1sen!2sin!4v1712381765299!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <div class="footer-inner bg-color-grey">
+        <div class="container">
+          <div class="footer-widgets">
+            <div class="row">
+              <div class="col-lg-3 col-md-8">
+                <div class="widget text-widget">
+                  <div class="footer-logo">
+                    <img src="assets/img/Alp-Logo.png" alt="Medibo" />
                   </div>
-                            </div>
-                        </div>
+                  <p>
+                    Exceptional, reliable care for your health needs. Your
+                    trusted health partner for quality pharmacy services.
+                  </p>
+                  <ul class="contact-list">
+                    <li>
+                      <a href="https://goo.gl/maps/inpkL6wUZqMR3opX7"
+                        ><i class="far fa-map-marker-alt"></i>Al Zahia
+                        Sharjah, U.A.E</a
+                      >
+                    </li>
+                    <li>
+                      <a href="mailto:Zahiapharmacy@gmail.com"
+                        ><i class="far fa-envelope"></i
+                        >Zahiapharmacy@gmail.com</a
+                      >
+                    </li>
+                    <li>
+                      <a href="tel:+971568474200"
+                        ><i class="far fa-phone"></i>+971 568474200</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="row">
+                  <div class="col-xl-5 col-md-6">
+                    <div class="widget nav-widget">
+                      <h4 class="widget-title">Popular Services</h4>
+                      <ul class="nav-links">
+                        <li><a href="#">Personal Care</a></li>
+                        <li><a href="#">Oral Care</a></li>
+                        <li><a href="#">Hair Care</a></li>
+                        <li><a href="#">Orthopedics</a></li>
+                        <li><a href="#">Medicines</a></li>
+                      </ul>
                     </div>
+                  </div>
+                  <div class="col-xl-5 col-md-6">
+                    <div class="widget nav-widget">
+                      <h4 class="widget-title">Quick Links</h4>
+                      <ul class="nav-links">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Service</a></li>
+                        <li><a href="#">Our Gallery</a></li>
+                        <li><a href="#">Contact</a></li>
+                      </ul>
+                    </div>
+                  </div>
                 </div>
-                <div class="copyright-area">
-                    <p>© 2024 <a href="https://sizcomdigital.com/">Sizcom Digital</a>. All Rights Reserved</p>
+              </div>
+              <div class="col-lg-3 col-md-10">
+                <div class="widget newsletters-widget">
+                  <h4 class="widget-title">Location</h4>
+                  <div class="google-maps">
+                    <!-- Height=450px; Width=600px -->
+                    <iframe
+                      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3606.4803776046215!2d55.468004500000006!3d25.321656599999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f5f8b08aa4211%3A0x49b620a79111f201!2sAL%20ZAHIA%20PHARMACY!5e0!3m2!1sen!2sin!4v1712381765299!5m2!1sen!2sin"
+                      width="600"
+                      height="450"
+                      style="border: 0"
+                      allowfullscreen=""
+                      loading="lazy"
+                      referrerpolicy="no-referrer-when-downgrade"
+                    ></iframe>
+                  </div>
                 </div>
+              </div>
             </div>
+          </div>
+          <div class="copyright-area">
+            <p>
+              © 2024 <a href="https://sizcomdigital.com/">Sizcom Digital</a>.
+              All Rights Reserved
+            </p>
+          </div>
         </div>
+      </div>
     </footer>
     <!--====== End Template Footer ======-->
 
